--- a/proyecto/Dockerfile
+++ b/proyecto/Dockerfile
@@ -1,29 +1,29 @@
-# 1. Etapa de construcción (build)
+#Hacer build
 FROM maven:3.9.3-eclipse-temurin-17 AS build
 
 WORKDIR /app
 
-# Copiar pom.xml y descargar dependencias (para cachear)
+#Copiar html
 COPY pom.xml .
 
 RUN mvn dependency:go-offline -B
 
-# Copiar el código fuente
+#Codigo fuente
 COPY src ./src
 
-# Construir el JAR, sin tests para acelerar (quita -DskipTests si quieres ejecutar tests)
-RUN mvn clean package -DskipTests
+#Construir el jar (PROBANDO LOS TESTS)
+RUN mvn clean package 
 
-# 2. Etapa de ejecución (runtime)
+#Ejecucion
 FROM eclipse-temurin:17-jre-jammy
 
 WORKDIR /app
 
-# Copiar el JAR generado desde la etapa build
+#Jar generado
 COPY --from=build /app/target/p5-0.0.1-SNAPSHOT.jar app.jar
 
-# Exponer puerto 8080 (puerto por defecto de Spring Boot)
+#Hay que exponer el puerto que se quiere usar (recordarlo en render)
 EXPOSE 8080
 
-# Comando para ejecutar la app
+#Ahora ejecutar app
 ENTRYPOINT ["java", "-jar", "app.jar"]
